--- a/.github/workflows/odoo-quality.yml
+++ b/.github/workflows/odoo-quality.yml
@@ -398,6 +398,12 @@ jobs:
       - name: Comment on PR
         if: ${{ always() && github.event_name == 'pull_request' }}
         uses: actions/github-script@v7
+        env:
+          BLACK_ERRORS: ${{ steps.black.outputs.errors }}
+          FLAKE8_ERRORS: ${{ steps.flake8.outputs.errors }}
+          PYLINT_ERRORS: ${{ steps.pylint.outputs.errors }}
+          RADON_ERRORS: ${{ steps.radon.outputs.errors }}
+          BANDIT_ERRORS: ${{ steps.bandit.outputs.errors }}
         with:
           script: |
             const results = {
@@ -410,11 +416,11 @@ jobs:
             };
 
             const errors = {
-              black: `${{ steps.black.outputs.errors }}`,
-              flake8: `${{ steps.flake8.outputs.errors }}`,
-              pylint: `${{ steps.pylint.outputs.errors }}`,
-              radon: `${{ steps.radon.outputs.errors }}`,
-              bandit: `${{ steps.bandit.outputs.errors }}`
+              black: process.env.BLACK_ERRORS || '',
+              flake8: process.env.FLAKE8_ERRORS || '',
+              pylint: process.env.PYLINT_ERRORS || '',
+              radon: process.env.RADON_ERRORS || '',
+              bandit: process.env.BANDIT_ERRORS || ''
             };
 
             const getStatus = (tool, result, error) => {
