--- a/.github/workflows/jenkins-trigger.yml
+++ b/.github/workflows/jenkins-trigger.yml
@@ -138,7 +138,7 @@ jobs:
         run: |
           # Get config values
           BUILD_DOCKER="${{ steps.config.outputs.build-docker }}"
-          IS_PUSH="${{ github.event_name == 'push' }}"
+          EVENT_NAME="${{ github.event_name }}"
           CURRENT_BRANCH="${{ github.ref_name }}"
           DEPLOY_BRANCHES="${{ inputs.deploy-branches }}"
           SKIP_CI="${{ inputs.skip-ci-in-jenkins }}"
@@ -158,7 +158,7 @@ jobs:
             fi
           done
 
-          echo "Event: ${{ github.event_name }}"
+          echo "Event: $EVENT_NAME"
           echo "Current Branch: $CURRENT_BRANCH"
           echo "Deploy Patterns: $DEPLOY_BRANCHES"
           echo "Is Deploy Branch: $IS_DEPLOY_BRANCH"
@@ -169,13 +169,15 @@ jobs:
           echo "Skip CI in Jenkins: $SKIP_CI"
 
           # PRs do NOT trigger Jenkins - tests run in GitHub Actions
-          if [ "$IS_PUSH" != "true" ]; then
+          # Note: When called via workflow_call (from cd.yml), event_name is "workflow_call"
+          # We skip only for explicit pull_request events
+          if [ "$EVENT_NAME" == "pull_request" ] || [ "$EVENT_NAME" == "pull_request_target" ]; then
             echo "skip=true" >> $GITHUB_OUTPUT
             echo "mode=Skipped (PR - tests run in GitHub Actions)" >> $GITHUB_OUTPUT
             exit 0
           fi
 
-          # Push events - Docker build only on deploy branches with build_docker=true
+          # Deploy only on deploy branches with build_docker=true
           if [ "$IS_DEPLOY_BRANCH" == "true" ] && [ "$BUILD_DOCKER" == "true" ]; then
             echo "skip=false" >> $GITHUB_OUTPUT
             echo "deploy=true" >> $GITHUB_OUTPUT
