feat: add install-all-modules and include-submodules options
- Add install-all-modules input to install all modules in repo, not just those with tests
- Add include-submodules input for recursive git submodule checkout
- Add [odoo.testing] config section support in pyproject.toml
- Dual-mode module discovery: all modules vs test modules only
- Remove jenkins-trigger.yml (CI/CD via Jenkins no longer used)
- Remove test-odoo-addon directory (accidental clone)
- Update README.md to reflect current workflows

BREAKING CHANGE: jenkins-trigger.yml removed

--- a/.github/workflows/odoo-tests.yml
+++ b/.github/workflows/odoo-tests.yml
@@ -37,6 +37,16 @@ on:
         required: false
         type: number
         default: 30
+      install-all-modules:
+        description: 'Install all modules in repo, not just those with tests'
+        required: false
+        type: boolean
+        default: false
+      include-submodules:
+        description: 'Include modules from git submodules'
+        required: false
+        type: boolean
+        default: false
     secrets:
       REGISTRY_URL:
         description: 'Docker registry URL for pulling Odoo images'
@@ -82,6 +92,7 @@ jobs:
         with:
           ref: ${{ github.head_ref || github.ref }}
           fetch-depth: 0
+          submodules: ${{ inputs.include-submodules && 'recursive' || 'false' }}
 
       - name: Read pyproject.toml
         id: config
@@ -93,8 +104,18 @@ jobs:
             exit 1
           fi
 
-          # Extract fast_tests
-          TEST_ENABLED=$(grep -E "^fast_tests\s*=" pyproject.toml | head -1 | sed 's/#.*//; s/.*=\s*//; s/[" ]//g')
+          # Extract test_enabled from [odoo.testing] section (preferred) or fall back to fast_tests from [odoo]
+          TEST_ENABLED=$(awk '/^\[odoo\.testing\]/,/^\[/' pyproject.toml | \
+                         grep -E "^enabled\s*=" | head -1 | \
+                         sed 's/.*=\s*//; s/[" ]//g')
+          if [ -z "$TEST_ENABLED" ]; then
+            # Fall back to fast_tests for backwards compatibility
+            TEST_ENABLED=$(grep -E "^fast_tests\s*=" pyproject.toml | head -1 | sed 's/#.*//; s/.*=\s*//; s/[" ]//g')
+          fi
+          if [ -z "$TEST_ENABLED" ]; then
+            # Fall back to test_enabled in [odoo] section
+            TEST_ENABLED=$(grep -E "^test_enabled\s*=" pyproject.toml | head -1 | sed 's/#.*//; s/.*=\s*//; s/[" ]//g')
+          fi
           if [ "$TEST_ENABLED" != "true" ]; then
             TEST_ENABLED="false"
           fi
@@ -109,6 +130,27 @@ jobs:
           echo "odoo-edition=$ODOO_EDITION" >> $GITHUB_OUTPUT
           echo "Odoo Edition: $ODOO_EDITION"
 
+          # Extract install_all_modules from [odoo.testing] (defaults to input value or false)
+          INSTALL_ALL=$(awk '/^\[odoo\.testing\]/,/^\[/' pyproject.toml | \
+                        grep -E "^install_all_modules\s*=" | head -1 | \
+                        sed 's/.*=\s*//; s/[" ]//g')
+          echo "install-all=${INSTALL_ALL:-false}" >> $GITHUB_OUTPUT
+          echo "Install All Modules: ${INSTALL_ALL:-false}"
+
+          # Extract include_submodules from [odoo.testing] (defaults to input value or false)
+          INCLUDE_SUBS=$(awk '/^\[odoo\.testing\]/,/^\[/' pyproject.toml | \
+                         grep -E "^include_submodules\s*=" | head -1 | \
+                         sed 's/.*=\s*//; s/[" ]//g')
+          echo "include-submodules=${INCLUDE_SUBS:-false}" >> $GITHUB_OUTPUT
+          echo "Include Submodules: ${INCLUDE_SUBS:-false}"
+
+          # Extract test_tags from [odoo.testing] (optional override)
+          TEST_TAGS=$(awk '/^\[odoo\.testing\]/,/^\[/' pyproject.toml | \
+                      grep -E "^test_tags\s*=" | head -1 | \
+                      sed 's/.*=\s*//; s/[" ]//g')
+          echo "test-tags=${TEST_TAGS:-}" >> $GITHUB_OUTPUT
+          echo "Test Tags (from config): ${TEST_TAGS:-not set}"
+
           echo "::endgroup::"
 
       - name: Check if tests are enabled
@@ -121,25 +163,72 @@ jobs:
             echo "skip=false" >> $GITHUB_OUTPUT
           fi
 
-      - name: Discover test modules
+      - name: Discover modules
         id: discover
         if: steps.check.outputs.skip != 'true'
         run: |
-          echo "::group::Discovering test modules"
+          echo "::group::Discovering modules"
+
+          # Determine effective settings (inputs override config file values if explicitly set)
+          # Config file value is used when input is false (default) and config is true
+          CONFIG_INSTALL_ALL="${{ steps.config.outputs.install-all }}"
+          INPUT_INSTALL_ALL="${{ inputs.install-all-modules }}"
+          if [ "$INPUT_INSTALL_ALL" == "true" ] || [ "$CONFIG_INSTALL_ALL" == "true" ]; then
+            INSTALL_ALL="true"
+          else
+            INSTALL_ALL="false"
+          fi
+          echo "Effective install-all-modules: $INSTALL_ALL"
+
+          # Use test tag from config if set, otherwise use input
+          CONFIG_TEST_TAGS="${{ steps.config.outputs.test-tags }}"
+          INPUT_TEST_TAGS="${{ inputs.test-tags }}"
+          if [ -n "$CONFIG_TEST_TAGS" ]; then
+            TEST_TAG="$CONFIG_TEST_TAGS"
+          else
+            TEST_TAG="$INPUT_TEST_TAGS"
+          fi
+          echo "Effective test tag: $TEST_TAG"
+
+          # Find ALL Odoo modules (by __manifest__.py)
+          ALL_MODULES=$(find . -name '__manifest__.py' \
+                        -not -path './enterprise/*' \
+                        -not -path './odoo-docker-minimal/*' | \
+                        xargs -I {} dirname {} | \
+                        xargs -I {} basename {} | \
+                        sort -u | tr '\n' ',' | sed 's/,$//')
+          echo "all-modules=$ALL_MODULES" >> $GITHUB_OUTPUT
+          ALL_COUNT=$(echo "$ALL_MODULES" | tr ',' '\n' | grep -c . || echo "0")
+          echo "All modules found: $ALL_COUNT"
+          echo "$ALL_MODULES" | tr ',' '\n' | head -20
+          [ "$ALL_COUNT" -gt 20 ] && echo "... and $(($ALL_COUNT - 20)) more"
 
           # Find modules with tests containing the test tag
-          TEST_TAG="${{ inputs.test-tags }}"
-          MODULES=$(find . -type f -path '*/tests/*.py' -exec grep -l "$TEST_TAG" {} \; 2>/dev/null | \
-                    rev | cut -d '/' -f 3 | rev | sort -u | tr '\n' ',' | sed 's/,$//')
+          TEST_MODULES=$(find . -type f -path '*/tests/*.py' \
+                         -not -path './enterprise/*' \
+                         -not -path './odoo-docker-minimal/*' \
+                         -exec grep -l "$TEST_TAG" {} \; 2>/dev/null | \
+                         rev | cut -d '/' -f 3 | rev | sort -u | tr '\n' ',' | sed 's/,$//')
+          echo "test-modules=$TEST_MODULES" >> $GITHUB_OUTPUT
+          TEST_COUNT=$(echo "$TEST_MODULES" | tr ',' '\n' | grep -c . || echo "0")
+          echo "Modules with tests ($TEST_TAG): $TEST_COUNT"
+          [ -n "$TEST_MODULES" ] && echo "$TEST_MODULES" | tr ',' '\n'
+
+          # Determine which modules to install
+          if [ "$INSTALL_ALL" == "true" ]; then
+            MODULES="$ALL_MODULES"
+            echo "Mode: Installing ALL modules ($ALL_COUNT modules)"
+          else
+            MODULES="$TEST_MODULES"
+            echo "Mode: Installing only modules with tests ($TEST_COUNT modules)"
+          fi
+          echo "modules=$MODULES" >> $GITHUB_OUTPUT
 
           if [ -z "$MODULES" ]; then
-            echo "::warning::No test modules found with tag '$TEST_TAG'"
-            echo "modules=" >> $GITHUB_OUTPUT
             echo "count=0" >> $GITHUB_OUTPUT
+            echo "::warning::No modules found to install"
           else
-            echo "Found modules: $MODULES"
-            echo "modules=$MODULES" >> $GITHUB_OUTPUT
-            COUNT=$(echo "$MODULES" | tr ',' '\n' | wc -l | tr -d ' ')
+            COUNT=$(echo "$MODULES" | tr ',' '\n' | grep -c . || echo "0")
             echo "count=$COUNT" >> $GITHUB_OUTPUT
           fi
 
@@ -149,16 +238,20 @@ jobs:
         id: final
         if: steps.check.outputs.skip != 'true'
         run: |
-          # Always run all discovered test modules (no PR filtering)
           MODULES="${{ steps.discover.outputs.modules }}"
+          TEST_MODULES="${{ steps.discover.outputs.test-modules }}"
 
           if [ -z "$MODULES" ]; then
             echo "skip=true" >> $GITHUB_OUTPUT
-            echo "::notice::No modules to test"
+            echo "::notice::No modules to install"
+          elif [ -z "$TEST_MODULES" ]; then
+            echo "skip=true" >> $GITHUB_OUTPUT
+            echo "::notice::No modules with tests found - skipping test run"
           else
             echo "skip=false" >> $GITHUB_OUTPUT
             echo "modules=$MODULES" >> $GITHUB_OUTPUT
-            echo "Final test modules: $MODULES"
+            echo "Final modules to install: $MODULES"
+            echo "Tests will run for modules: $TEST_MODULES"
           fi
 
       - name: Checkout odoo-docker-minimal
